--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.6</version>
         </dependency>
+        <!-- google java lib -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
 
         <!--poi-->
         <dependency>
@@ -201,7 +207,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>ooxml-schemas</artifactId>
-            <version>1.3</version>
+            <version>1.1</version>
         </dependency>
 
     </dependencies>
